@@ -1,13 +1,12 @@
-This is an introduction section that will help you with the set-up necessary to follow the examples of the guide 
-and introduce the basic Lincheck API.
+This introductory section will help you with the set-up necessary to follow the examples of the guide and introduce the basic Lincheck API.
 
 ## Create a project
 
-1. Open a Kotlin project in IntelliJ IDEA. If you don't have a project, [create one](https://kotlinlang.org/docs/jvm-get-started.html).
+1. Open a Kotlin project in IntelliJ IDEA. If you don't have one, [create a new project](https://kotlinlang.org/docs/jvm-get-started.html).
 
-2. Open the `main.kt` file in `src/main/kotlin`. The `main.kt` file contains sample code that will print `Hello World!`.
+2. Open the `main.kt` file in `src/main/kotlin`. The `main.kt` file contains a sample code that prints `Hello World!`.
 
-2. Change code in the `main()` function to:
+2. Replace the code in `main.kt` with the following counter implementation:
 
     ```kotlin
     class Counter {
@@ -18,12 +17,14 @@ and introduce the basic Lincheck API.
         fun get() = value
    }
     ```
-   Now we are going to check whether this implementation of a counter is thread-safe using `Lincheck`.
+   Now we are going to check whether this counter is thread-safe by writing a test with `Lincheck`.
    
-## Add dependencies
+## Add required dependencies
 
-Open the `build.gradle(.kts)` file, make sure that you have `mavenCentral()` in the list of repositories and add the 
-following dependencies to the Gradle configuration.
+First, we need to add `Lincheck` as a dependency to your project. 
+Open the `build.gradle(.kts)` file, make sure that you have `mavenCentral()` in the list of repositories, and add the following dependencies to the Gradle configuration.
+
+TODO: testImplementation for Lincheck?
 
 ```groovy
 repositories {
@@ -32,16 +33,19 @@ repositories {
 
 dependencies {
    // Lincheck dependency
-   implementation "org.jetbrains.kotlinx:lincheck:2.12"
+   implementation "org.jetbrains.kotlinx:lincheck:2.13"
    
    // This dependency will allow you to work with kotlin.test and JUnit:
    testImplementation "org.jetbrains.kotlin:kotlin-test"
 }
 ```
 
-## Create a test
+## Write your first Lincheck test
  
 Create `CounterTest.kt` file in the directory `src/test/kotlin` and put the following code there:
+
+TODO: should we include imports in the code blocks? 
+TODO: AFAIR, you can write `options.check(this::class)`
 
 ```kotlin
 class CounterTest {
@@ -52,19 +56,19 @@ class CounterTest {
    @Operation fun get() = c.get()
 
    @Test // JUnit
-   fun test() = StressOptions().check(this::class.java) // magic button
+   fun test() = StressOptions().check(this::class) // the magic button
 }
 ```
 
 This is a basic Lincheck test that will automatically: 
 
-* Generate several random concurrent scenarios.
-* Execute each of them a lot of times.
-* Verify that results of every invocation are correct (linearizable for example). 
+1. Generate several random concurrent scenarios;
+2. Examine each of them performing a lot of scenario invocations;
+3. Verify that each of the observed invocation results are correct. 
 
 ## Run the test
 
-Run the test and you will see the following results:
+Run the test above, and you will see the following error:
 
 ```text
 = Invalid execution results =
@@ -72,17 +76,19 @@ Parallel part:
 | inc(): 1 | inc(): 1 |
 ```
 
-Lincheck found the execution scenario that violates atomicity of the `Counter`: 
-two concurrent increment invocations ended with the same result `1`, one increment was lost.
-Obviously, this behaviour of the counter is incorrect.
+Here, `Lincheck` found an execution that violates atomicity of the `Counter` &ndash;
+two concurrent increments ended with the same result `1`; so one increment was lost.
+Obviously, this behavior of the counter is incorrect.
 
 ## Trace the invalid execution
 
-Besides the invalid execution results, you can also get the exact trace of thread interleaving that lead to the error.
+Besides the invalid execution results, it is also possible to find the exact interleaving that leads to the error. 
+This feature is accessible with the *model checking* testing mode, which examines many different interleavings with a bounded number of context switches.
 
-For that you just need to switch the testing mode: replace the stress testing mode options `StressOptions()` 
-with the model checking options `ModelCheckingOptions()` in the `test()` method of the `CounterTest` class 
-and run the test again. 
+To switch the testing mode, you need to replace the options type from `StressOptions()` 
+to `ModelCheckingOptions()`. The updated `CounterTest` class is presented below:
+
+TODO: I am not sure that this code will work without `--add-opens` and `--add-exports`
  
 ```kotlin
 class CounterTest {
@@ -91,12 +97,12 @@ class CounterTest {
    @Operation fun getAndInc() = c.getAndInc()
    @Operation fun get() = c.get()
     
-   @Test // model checking mode
-   fun test() = ModelCheckingOptions().check(this::class.java)
+   @Test
+   fun test() = ModelCheckingOptions().check(this::class)
 }
 ```
 
-Now you see the whole execution trace leading to the incorrect results:
+When you re-run the test with model checking instead of stress testing, you will get the execution trace leading to the incorrect results:
     
 ```text
 = Invalid execution results =
@@ -104,28 +110,25 @@ Parallel part:
 | inc(): 1 | inc(): 1 |
 = The following interleaving leads to the error =
 Parallel part trace:
-|                      | inc()                                                        |
-|                      |   inc(): 1 at CounterTest.inc(CounterTest.kt:146) |
-|                      |     value.READ: 0 at Counter.inc(CounterTest.kt:105)           |
-|                      |     switch                                                   |
-| inc(): 1             |                                                              |
-|   thread is finished |                                                              |
-|                      |     value.WRITE(1) at Counter.inc(CounterTest.kt:105)          |
-|                      |     value.READ: 1 at Counter.inc(CounterTest.kt:105)           |
-|                      |   result: 1                                                  |
-|                      |   thread is finished                                         |
+|                      | inc()                                                 |
+|                      |   inc(): 1 at CounterTest.inc(CounterTest.kt:146)     |
+|                      |     value.READ: 0 at Counter.inc(CounterTest.kt:105)  |
+|                      |     switch                                            |
+| inc(): 1             |                                                       |
+|   thread is finished |                                                       |
+|                      |     value.WRITE(1) at Counter.inc(CounterTest.kt:105) |
+|                      |     value.READ: 1 at Counter.inc(CounterTest.kt:105)  |
+|                      |   result: 1                                           |
+|                      |   thread is finished                                  |
 ```
     
-Let's read the trace:
-
-1. Thread 2 read the current value of the counter `value.READ: 0`
-2. The execution switched to Thread 1
-3. Thread 1 executed `inc()` completely and returned `1`
-4. The execution switched back to the Thread 2
-5. Thread 2 increments the old value of the counter that was read before the switch and returned `1`
-
+In this trace, the following list of events have occurred:  
+**T2:** The 2nd thread reads the current value of the counter (`value.READ: 0`) and pauses.    
+**T1:** The 1st thread executes `inc()`, which returns `1`, and finishes.  
+**T2:** The 2nd thread increments the previously read value of the counter and incorrectly updates it to `1`, returning `1` as a result.
 
 ## Test structure
+TODO: I am not sure that we should discuss the test structure in the "Lincheck Hello World" section.
 
 Here are the steps to write the test:
 
